---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added rate limiting to most interface interactions, improving performance and avoiding crashes in high-latency multiplayer situations
  Changes:
    - Removed Performance Mode, as it no longer did anything
  Bugfixes:
    - 

---------------------------------------------------------------------------------------------------
Version: 0.18.6
Date: 29. 02. 2020
  Bugfixes:
    - Removed superfluous logging that lead to crashes

---------------------------------------------------------------------------------------------------
Version: 0.18.5
Date: 29. 02. 2020
  Bugfixes:
    - Fixed energy consumption and pollution not being added up correctly if your subfactory contains subfloors
    - Hide recipes that can't ever be researched, which led Factory Planner to crash

---------------------------------------------------------------------------------------------------
Version: 0.18.4
Date: 26. 02. 2020
  Bugfixes:
    - Fixed a crash when opening preferences when using modded items with infinite fuel values
    - Fixed a crash when submitting the product picker without a product selected
    - Fixed several crashes related to invalid inputs in dialog windows
    - Mitigated all crashes caused by mod-created hidden modules/beacons

---------------------------------------------------------------------------------------------------
Version: 0.18.3
Date: 21. 02. 2020
  Features:
    - Added pollution information to machine tooltips
    - Added a tooltip explaining what the percentage-textfield on the recipe-lines does
  Bugfixes:
    - Fixed that the recipe dialog didn't have the correct size sometimes
    - Added exception for the mod 'Deep Mine' so the preferences dialog doesn't crash when it is installed
    - Fixed a crash when using the beacon selection tool