@@ -63,12 +63,12 @@ function calculation.interface.set_subfactory_result(result)
     calculation.util.update_items(subfactory, result, "Ingredient")
 
     -- Determine satisfaction-amounts for all line ingredients
-    --if not player_table.settings.performance_mode then
+    if player_table.preferences.ingredient_satisfaction then
         local top_floor = Subfactory.get(subfactory, "Floor", 1)
         local aggregate = structures.aggregate.init()  -- gets modified by the two functions
         calculation.util.determine_net_ingredients(top_floor, aggregate)
         calculation.util.update_ingredient_satisfaction(top_floor, aggregate)
-    --end
+    end
 end
 
 -- Updates the given line of the given floor of the active subfactory
@@ -234,6 +234,21 @@ function calculation.util.update_ingredient_satisfaction(floor, aggregate)
 
                 ingredient.satisfied_amount = ingredient.amount - removed_amount
                 structures.aggregate.subtract(aggregate, "Ingredient", {type=ingredient.proto.type, name=ingredient.proto.name}, removed_amount)
+            end
+        end
+    end
+end
+
+-- Goes through all subfactories to update their ingredient satisfaction numbers
+function calculation.util.update_all_ingredient_satisfactions(player)
+    local factories = {"factory", "archive"}
+    for _, player_table in pairs(global.players) do
+        for _, factory_name in pairs(factories) do
+            for _, subfactory in ipairs(Factory.get_in_order(player_table[factory_name], "Subfactory")) do
+                local top_floor = Subfactory.get(subfactory, "Floor", 1)
+                local aggregate = structures.aggregate.init()  -- gets modified by the two functions
+                calculation.util.determine_net_ingredients(top_floor, aggregate)
+                calculation.util.update_ingredient_satisfaction(top_floor, aggregate)
             end
         end
     end
