@@ -21,8 +21,6 @@ fp_floor_recipes_at_once=Interface-height
 fp_default_timescale=Default timescale
 fp_view_belts_or_lanes=View type
 fp_line_comments=Recipe comments
-fp_ingredient_satisfaction=Ingredient satisfaction
-fp_round_button_numbers=Round button numbers
 fp_indicate_rounding=Machine rounding precision
 
 [mod-setting-description]
@@ -33,8 +31,6 @@ fp_floor_recipes_at_once=Set the main interface height by choosing how many reci
 fp_default_timescale=Choose the timescale that any new subfactory should be created with.
 fp_view_belts_or_lanes=Indicate whether you think of item throughput as lanes or as full belts.
 fp_line_comments=Attaches a comment textfield to every recipe line.
-fp_ingredient_satisfaction=Shows whether the ingredient-demands of a recipe are satisfied by the recipes below them.
-fp_round_button_numbers=Rounds the numbers on machine- and belts/lanes-buttons. This setting is ignored for machine-buttons if the ’Machine rounding precision’-setting is active.
 fp_indicate_rounding=Sets the precision with which machine numbers are rounded. For example, setting this to 0.05 means a machine number of 1.96 will show as a perfect 2 machines, while 1.94 will show as being rounded up. This also works in the opposite direction, meaning 2.04 shows as a perfect 2 machines. Setting this to 0 disables the feature.
 
 [string-mod-setting]
@@ -280,8 +276,12 @@ preferences=Preferences
 preferences_info=These preferences contain settings that you adjust often over the course of a game.\nFor general settings, go to Main Menu→Settings→Mod Settings→Factory Planner.
 preferences_ignore_barreling_recipes=Ignore barreling and stacking recipes
 preferences_ignore_recycling_recipes=Ignore recycling recipes
+preferences_ingredient_satisfaction=Ingredient satisfaction
+preferences_round_button_numbers=Round button numbers
 preferences_ignore_barreling_recipes_tt=Allows you to ignore (un)barreling and (un)stacking when looking for a recipe. (Only for compatible mods)
 preferences_ignore_recycling_recipes_tt=Allows you to ignore recipes that recycle an existing item. (Only for compatible mods)
+preferences_ingredient_satisfaction_tt=Shows whether the ingredient-demands of a recipe are satisfied by the recipes below them. Might have small performance impact.
+preferences_round_button_numbers_tt=Rounds the numbers on machine- and belts/lanes-buttons. This preference is ignored for machine-buttons if the ’Machine rounding precision’ mod setting is active.
 preferences_title_general=General preferences
 preferences_title_belts=Select the preferred belt for the belt production view
 preferences_title_fuels=Select the preferred fuel type for your burner machines
