@@ -4,6 +4,7 @@ Date: 00. 00. 0000
   Features:
     - Added rate limiting to most interface interactions, improving performance and avoiding crashes in high-latency multiplayer situations
   Changes:
+    - Changed some mod settings to be preferences
     - Removed Performance Mode, as it no longer did anything
   Bugfixes:
     - 
